--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <header>
         <nav class="navigate">
         <a class="navigate-logo" href="index.html"> <span class="navigate-logo-color">Web</span>Studio</a>
-        <ul>  
+        <ul class="navigate-list">  
             <li><a class="navigate-studio" href="index.html">Студия</a></li>
             <li><a class="navigate-portfolio" href="portfolio.html">Портфолио</a></li>
             <li><a class="navigate-contacts" href="">Контакты</a></li>
         </ul>
         </nav>
-        <ul>
+        <ul class="navigate-list">
             <li><a class="navigate-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="navigate-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
 
@@ -35,7 +35,7 @@
     </section>
     <section>
         <h2 class="title-advantages">Наши Преимущества</h2>
-        <ul>
+        <ul class="title-advantages-list">
             <li>
                 <h3 class="title-advantages-subject"> Внимание к деталям</h3> 
                 <p class="title-advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
