--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <h1 class="title-hero">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button"> <span class="hero-button-text">Заказать услугу</span></button>
     </section>
-    <section>
+    <section class="advantages">
         <h2 class="title-advantages">Наши Преимущества</h2>
-        <ul class="title-advantages-list">
+        <ul class="advantages-list">
             <li>
                 <h3 class="title-advantages-subject"> Внимание к деталям</h3> 
                 <p class="title-advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
