--- a/index.html
+++ b/index.html
@@ -16,89 +16,102 @@
 
 <body>
     <header>
-        <nav class="navigate">
-            <a class="navigate-logo" href="index.html"> <span class="navigate-logo-color">Web</span>Studio</a>
-            <ul class="navigate-list">
-                <li><a class="navigate-studio" href="index.html">Студия</a></li>
-                <li><a class="navigate-portfolio" href="portfolio.html">Портфолио</a></li>
-                <li><a class="navigate-contacts" href="">Контакты</a></li>
+        <div class="container nav">
+            <nav class="navigate">
+                <a class="navigate-logo" href="index.html"> <span class="navigate-logo-color">Web</span>Studio</a>
+                <ul class="navigate-list">
+                    <li class="item"><a class="navigate-studio" href="index.html">Студия</a></li>
+                    <li class="item"><a class="navigate-portfolio" href="portfolio.html">Портфолио</a></li>
+                    <li class="item"><a class="navigate-contacts" href="">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="navigate-list mail">
+                <li class="item"><a class="navigate-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="item"><a class="navigate-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="navigate-list">
-            <li><a class="navigate-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="navigate-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
-
-        </ul>
+        </div>
     </header>
+
     <main>
-        <section>
-            <h1 class="title-hero">Эффективные решения для вашего бизнеса</h1>
-            <button class="hero-button" type="button">Заказать услугу</button>
+        <div class="container">
+            <section class="hero-section">
+                <h1 class="title-hero">Эффективные решения для вашего бизнеса</h1>
+                <button class="hero-button" type="button">Заказать услугу</button>
+            </section>
+        </div>
+        <section class="advantages-section">
+            <div class="container">
+                <h2 class="title-advantages">Наши Преимущества</h2>
+                <ul class="advantages-list">
+                    <li>
+                        <h3 class="title-advantages-subject"> Внимание к деталям</h3>
+                        <p class="title-advantages-text">Идейные соображения, а также начало повседневной работы по
+                            формированию позиции.</p>
+                    </li>
+                    <li>
+                        <h3 class="title-advantages-subject"> Пунктуальность</h3>
+                        <p class="title-advantages-text">Задача организации, в особенности же рамки и место обучения
+                            кадров
+                            влечет за собой.</p>
+                    </li>
+                    <li>
+                        <h3 class="title-advantages-subject"> Планирование</h3>
+                        <p class="title-advantages-text">Равным образом консультация с широким активом в значительной
+                            степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <h3 class="title-advantages-subject"> Современные технологии</h3>
+                        <p class="title-advantages-text">Значимость этих проблем настолько очевидна, что реализация
+                            плановых
+                            заданий.</p>
+                    </li>
+
+                </ul>
+            </div>
         </section>
-        <section class="advantages">
-            <h2 class="title-advantages">Наши Преимущества</h2>
-            <ul class="advantages-list">
-                <li>
-                    <h3 class="title-advantages-subject"> Внимание к деталям</h3>
-                    <p class="title-advantages-text">Идейные соображения, а также начало повседневной работы по
-                        формированию позиции.</p>
-                </li>
-                <li>
-                    <h3 class="title-advantages-subject"> Пунктуальность</h3>
-                    <p class="title-advantages-text">Задача организации, в особенности же рамки и место обучения кадров
-                        влечет за собой.</p>
-                </li>
-                <li>
-                    <h3 class="title-advantages-subject"> Планирование</h3>
-                    <p class="title-advantages-text">Равным образом консультация с широким активом в значительной
-                        степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3 class="title-advantages-subject"> Современные технологии</h3>
-                    <p class="title-advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых
-                        заданий.</p>
-                </li>
+        <section class="samples-section">
+            <div class="container">
+                <h2 class="title-samples">Чем мы занимаемся</h2>
+                <ul class="samples-list">
+                    <li><a class="title-samples-link" href=""><img src="images/laptop_picture.jpg" width="370"
+                                height="294" alt="работа на ноутбуке"> </a></li>
+                    <li><a class="title-samples-link" href=""><img src="images/phone_picture.jpg" width="370"
+                                height="294" alt="осмотр макета на ноутбуке"> </a></li>
+                    <li><a class="title-samples-link" href=""><img src="images/ipad_picture.jpg" width="370"
+                                height="294" alt="палитра цветов на планшете"> </a></li>
 
-            </ul>
+                </ul>
+            </div>
         </section>
-        <section>
-            <h2 class="title-samples">Чем мы занимаемся</h2>
-            <ul class="samples-list">
-                <li><a class="title-samples-link" href=""><img src="images/laptop_picture.jpg" width="370" height="294"
-                            alt="работа на ноутбуке"> </a></li>
-                <li><a class="title-samples-link" href=""><img src="images/phone_picture.jpg" width="370" height="294"
-                            alt="осмотр макета на ноутбуке"> </a></li>
-                <li><a class="title-samples-link" href=""><img src="images/ipad_picture.jpg" width="370" height="294"
-                            alt="палитра цветов на планшете"> </a></li>
+        <section class="team-section">
+            <div class="container">
+                <h2 class="title-team">Наша команда</h2>
+                <ul class="team-list">
 
-            </ul>
-        </section>
-        <section>
-            <h2 class="title-team">Наша команда</h2>
-            <ul class="team-list">
+                    <li><img src="images/ihor_demjanenko.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                        <h3 class="title-team-subject">Игорь Демьяненко</h3>
+                        <p class="title-team-text" lang="en">Product Designer</p>
+                    </li>
+                    <li><img src="images/olha_repina.jpg" alt="Ольга Репина" width="270" height="260">
+                        <h3 class="title-team-subject">Ольга Репина</h3>
+                        <p class="title-team-text" lang="en">Frontend Developer</p>
+                    </li>
+                    <li><img src="images/nikolai_tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
+                        <h3 class="title-team-subject">Николай Тарасов</h3>
+                        <p class="title-team-text" lang="en">Marketing</p>
+                    </li>
+                    <li><img src="images/mihail_yarmakov.jpg" alt="Михаил Ярмаков" width="270" height="260">
+                        <h3 class="title-team-subject">Михаил Ермаков</h3>
+                        <p class="title-team-text" lang="en">UI Designer</p>
+                    </li>
 
-                <li><img src="images/ihor_demjanenko.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                    <h3 class="title-team-subject">Игорь Демьяненко</h3>
-                    <p class="title-team-text" lang="en">Product Designer</p>
-                </li>
-                <li><img src="images/olha_repina.jpg" alt="Ольга Репина" width="270" height="260">
-                    <h3 class="title-team-subject">Ольга Репина</h3>
-                    <p class="title-team-text" lang="en">Frontend Developer</p>
-                </li>
-                <li><img src="images/nikolai_tarasov.jpg" alt="Николай Тарасов" width="270" height="260">
-                    <h3 class="title-team-subject">Николай Тарасов</h3>
-                    <p class="title-team-text" lang="en">Marketing</p>
-                </li>
-                <li><img src="images/mihail_yarmakov.jpg" alt="Михаил Ярмаков" width="270" height="260">
-                    <h3 class="title-team-subject">Михаил Ермаков</h3>
-                    <p class="title-team-text" lang="en">UI Designer</p>
-                </li>
-
-            </ul>
+                </ul>
+            </div>
         </section>
     </main>
-    <div class="footer">
-        <footer>
+    <footer class="footer">
+        <div class="container">
+
             <a class="navigate-logo" href="index.html"> <span class="navigate-logo-color">Web</span> <span
                     class="footer-logo-color"> Studio </span></a>
             <address>
@@ -111,10 +124,8 @@
 
                 </ul>
             </address>
-        </footer>
-    </div>
-
-
+        </div>
+    </footer>
 </body>
 
 </html>
