--- a/portfolio.html
+++ b/portfolio.html
@@ -15,99 +15,110 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navigate">
-            <a class="navigate-logo" href="index.html"> <span class="navigate-logo-color">Web</span>Studio</a>
-            <ul>
-                <li><a class="navigate-studio" href="index.html">Студия</a></li>
-                <li><a class="navigate-portfolio" href="portfolio.html">Портфолио</a></li>
-                <li><a class="navigate-contacts" href="">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul>
-            <li><a class="navigate-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="navigate-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <div class="container">
+        <header>
+            <nav class="navigate">
+                <a class="navigate-logo" href="index.html"> <span class="navigate-logo-color">Web</span>Studio</a>
+                <ul class="navigate-list" <li><a class="navigate-studio" href="index.html">Студия</a></li>
+                    <li><a class="navigate-portfolio" href="portfolio.html">Портфолио</a></li>
+                    <li><a class="navigate-contacts" href="">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="navigate-list">
+                <li><a class="navigate-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="navigate-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
 
-        </ul>
-    </header>
+            </ul>
+        </header>
+    </div>
     <main>
-        <section>
-            <h1>Наши Проекты</h1>
-            <ul class="button-list">
-                <li> <button class="button-list-item" type="button">Все</button></a>
-                </li>
-                <li> <button class="button-list-item" type="button">Веб-сайты</button></a>
-                </li>
-                <li> <button class="button-list-item" type="button">Приложения</button></a>
-                </li>
-                <li> <button class="button-list-item" type="button">Дизайн</button></a>
-                </li>
-                <li> <button class="button-list-item" type="button">Маркетинг</button></a>
-                </li>
+        <div class="container">
+            <section class="projects-section">
+                <h1>Наши Проекты</h1>
+                <ul class="projects-section-button-list">
+                    <li> <button class="button-list-item" type="button">Все</button></a>
+                    </li>
+                    <li> <button class="button-list-item" type="button">Веб-сайты</button></a>
+                    </li>
+                    <li> <button class="button-list-item" type="button">Приложения</button></a>
+                    </li>
+                    <li> <button class="button-list-item" type="button">Дизайн</button></a>
+                    </li>
+                    <li> <button class="button-list-item" type="button">Маркетинг</button></a>
+                    </li>
 
-            </ul>
-            <ul class="portfolio-title-samples">
-                <li>
-                    <a href=""><img src="./images/project_1.jpg" width="370" height="294" alt="Веб-сайт на ноутбуке">
-                        <h2 class="portfolio-title-samples-subject">Технокряк</h2>
-                        <p class="portfolio-title-samples-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/project_2.jpg" width="370" height="294" alt="Постер по баскетболу">
-                        <h2 class="portfolio-title-samples-subject">Постер <span lang="en">New Orlean vs Golden
-                                Star</span></h2>
-                        <p class="portfolio-title-samples-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/project_3.jpg" width="370" height="294"
-                            alt="Иконка приложения для ресторана"></a>
-                    <h2 class="portfolio-title-samples-subject">Ресторан <span lang="en">Seafood</span></h2>
-                    <p class="portfolio-title-samples-text">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/project_4.jpg" width="370" height="294" alt="Проект для наушников">
-                        <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Prime</span></h2>
-                        <p class="portfolio-title-samples-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/project_5.jpg" width="370" height="294" alt="Проект для коробок">
-                        <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Boxes</span></h2>
+                </ul>
+                <ul class="projects-section-title-samples">
+                    <li>
+
+                        <a href=""><img src="./images/project_1.jpg" width="370" height="294"
+                                alt="Веб-сайт на ноутбуке">
+                            <h2 class="portfolio-title-samples-subject">Технокряк</h2>
+                            <p class="portfolio-title-samples-text">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="./images/project_2.jpg" width="370" height="294"
+                                alt="Постер по баскетболу">
+                            <h2 class="portfolio-title-samples-subject">Постер <span lang="en">New Orlean vs Golden
+                                    Star</span></h2>
+                            <p class="portfolio-title-samples-text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="./images/project_3.jpg" width="370" height="294"
+                                alt="Иконка приложения для ресторана"></a>
+                        <h2 class="portfolio-title-samples-subject">Ресторан <span lang="en">Seafood</span></h2>
                         <p class="portfolio-title-samples-text">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/project_6.jpg" width="370" height="294" alt="Веб-сайт на моноблоке">
-                        <h2 class="portfolio-title-samples-subject" lang="en">Inspiration has no Borders</h2>
-                        <p class="portfolio-title-samples-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/project_7.jpg" width="370" height="294" alt="Разворот книги">
-                        <h2 class="portfolio-title-samples-subject">Издание <span lang="en">Limited Edition</span></h2>
-                        <p class="portfolio-title-samples-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/project_8.jpg" width="370" height="294" alt="Маркетинговый проект">
-                        <h2 class="portfolio-title-samples-subject">Проект <span lang="en">LAB</span></h2>
-                        <p class="portfolio-title-samples-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/project_9.jpg" width="370" height="294" alt="Приложение для ноутбука">
-                        <h2 class="portfolio-title-samples-subject">Growing Business</h2>
-                        <p class="portfolio-title-samples-text">Приложение</p>
-                    </a>
-                </li>
-            </ul>
-        </section>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="./images/project_4.jpg" width="370" height="294"
+                                alt="Проект для наушников">
+                            <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Prime</span></h2>
+                            <p class="portfolio-title-samples-text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="./images/project_5.jpg" width="370" height="294" alt="Проект для коробок">
+                            <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Boxes</span></h2>
+                            <p class="portfolio-title-samples-text">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="./images/project_6.jpg" width="370" height="294"
+                                alt="Веб-сайт на моноблоке">
+                            <h2 class="portfolio-title-samples-subject" lang="en">Inspiration has no Borders</h2>
+                            <p class="portfolio-title-samples-text">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="./images/project_7.jpg" width="370" height="294" alt="Разворот книги">
+                            <h2 class="portfolio-title-samples-subject">Издание <span lang="en">Limited Edition</span>
+                            </h2>
+                            <p class="portfolio-title-samples-text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="./images/project_8.jpg" width="370" height="294"
+                                alt="Маркетинговый проект">
+                            <h2 class="portfolio-title-samples-subject">Проект <span lang="en">LAB</span></h2>
+                            <p class="portfolio-title-samples-text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href=""><img src="./images/project_9.jpg" width="370" height="294"
+                                alt="Приложение для ноутбука">
+                            <h2 class="portfolio-title-samples-subject">Growing Business</h2>
+                            <p class="portfolio-title-samples-text">Приложение</p>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+        </div>
     </main>
-    <div class="footer">
-        <footer>
+    <div class="container">
+        <footer class="footer">
             <a class="navigate-logo" href="index.html"> <span class="navigate-logo-color">Web</span> <span
                     class="footer-logo-color"> Studio</span></a>
             <address>
