--- a/portfolio.html
+++ b/portfolio.html
@@ -55,67 +55,79 @@
 
                         <a href=""><img src="./images/project_1.jpg" width="370" height="294"
                                 alt="Веб-сайт на ноутбуке">
-                            <h2 class="portfolio-title-samples-subject">Технокряк</h2>
-                            <p class="portfolio-title-samples-text">Веб-сайт</p>
+                            <div class="content">
+                                <h2 class="portfolio-title-samples-subject">Технокряк</h2>
+                                <p class="portfolio-title-samples-text">Веб-сайт</p>
                         </a>
-                    </li>
-                    <li class="item">
-                        <a href=""><img src="./images/project_2.jpg" width="370" height="294"
-                                alt="Постер по баскетболу">
-                            <h2 class="portfolio-title-samples-subject">Постер <span lang="en">New Orlean vs Golden
-                                    Star</span></h2>
-                            <p class="portfolio-title-samples-text">Дизайн</p>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href=""><img src="./images/project_3.jpg" width="370" height="294"
-                                alt="Иконка приложения для ресторана"></a>
-                        <h2 class="portfolio-title-samples-subject">Ресторан <span lang="en">Seafood</span></h2>
+            </div>
+            </li>
+            <li class="item">
+                <a href=""><img src="./images/project_2.jpg" width="370" height="294" alt="Постер по баскетболу">
+                    <div class="content">
+                        <h2 class="portfolio-title-samples-subject">Постер <span lang="en">New Orlean vs Golden
+                                Star</span></h2>
+                        <p class="portfolio-title-samples-text">Дизайн</p>
+                    </div>
+                </a>
+            </li>
+            <li class="item">
+                <a href=""><img src="./images/project_3.jpg" width="370" height="294"
+                        alt="Иконка приложения для ресторана"></a>
+                <div class="content">
+                    <h2 class="portfolio-title-samples-subject">Ресторан <span lang="en">Seafood</span></h2>
+                    <p class="portfolio-title-samples-text">Приложение</p>
+                    </a>
+                </div>
+            </li>
+            <li class="item">
+                <a href=""><img src="./images/project_4.jpg" width="370" height="294" alt="Проект для наушников">
+                    <div class="content">
+                        <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Prime</span></h2>
+                        <p class="portfolio-title-samples-text">Маркетинг</p>
+                </a>
+                </div>
+            </li>
+            <li class="item">
+                <a href=""><img src="./images/project_5.jpg" width="370" height="294" alt="Проект для коробок">
+                    <div class="content">
+                        <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Boxes</span></h2>
                         <p class="portfolio-title-samples-text">Приложение</p>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href=""><img src="./images/project_4.jpg" width="370" height="294"
-                                alt="Проект для наушников">
-                            <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Prime</span></h2>
-                            <p class="portfolio-title-samples-text">Маркетинг</p>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href=""><img src="./images/project_5.jpg" width="370" height="294" alt="Проект для коробок">
-                            <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Boxes</span></h2>
-                            <p class="portfolio-title-samples-text">Приложение</p>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href=""><img src="./images/project_6.jpg" width="370" height="294"
-                                alt="Веб-сайт на моноблоке">
-                            <h2 class="portfolio-title-samples-subject" lang="en">Inspiration has no Borders</h2>
-                            <p class="portfolio-title-samples-text">Веб-сайт</p>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href=""><img src="./images/project_7.jpg" width="370" height="294" alt="Разворот книги">
-                            <h2 class="portfolio-title-samples-subject">Издание <span lang="en">Limited Edition</span>
-                            </h2>
-                            <p class="portfolio-title-samples-text">Дизайн</p>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href=""><img src="./images/project_8.jpg" width="370" height="294"
-                                alt="Маркетинговый проект">
-                            <h2 class="portfolio-title-samples-subject">Проект <span lang="en">LAB</span></h2>
-                            <p class="portfolio-title-samples-text">Маркетинг</p>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href=""><img src="./images/project_9.jpg" width="370" height="294"
-                                alt="Приложение для ноутбука">
-                            <h2 class="portfolio-title-samples-subject">Growing Business</h2>
-                            <p class="portfolio-title-samples-text">Приложение</p>
-                        </a>
-                    </li>
-                </ul>
+                </a>
+                </div>
+            </li>
+            <li class="item">
+                <a href=""><img src="./images/project_6.jpg" width="370" height="294" alt="Веб-сайт на моноблоке">
+                    <div class="content">
+                        <h2 class="portfolio-title-samples-subject" lang="en">Inspiration has no Borders</h2>
+                        <p class="portfolio-title-samples-text">Веб-сайт</p>
+                </a>
+                </div>
+            </li>
+            <li class="item">
+                <a href=""><img src="./images/project_7.jpg" width="370" height="294" alt="Разворот книги">
+                    <div class="content">
+                        <h2 class="portfolio-title-samples-subject">Издание <span lang="en">Limited Edition</span></h2>
+                        <p class="portfolio-title-samples-text">Дизайн</p>
+                </a>
+                </div>
+            </li>
+            <li class="item">
+                <a href=""><img src="./images/project_8.jpg" width="370" height="294" alt="Маркетинговый проект">
+                    <div class="content">
+                        <h2 class="portfolio-title-samples-subject">Проект <span lang="en">LAB</span></h2>
+                        <p class="portfolio-title-samples-text">Маркетинг</p>
+                </a>
+                </div>
+            </li>
+            <li class="item">
+                <a href=""><img src="./images/project_9.jpg" width="370" height="294" alt="Приложение для ноутбука">
+                    <div class="content">
+                        <h2 class="portfolio-title-samples-subject">Growing Business</h2>
+                        <p class="portfolio-title-samples-text">Приложение</p>
+                </a>
+                </div>
+            </li>
+            </ul>
             </div>
         </section>
     </main>
