--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                 <ul class="projects-section-title-samples">
                     <li class="item">
 
-                        <a href=""><img src="./images/project_1.jpg" width="370" height="294"
+                        <a href=""><img class="image" src="./images/project_1.jpg" width="370" height="294"
                                 alt="Веб-сайт на ноутбуке">
                             <div class="content">
                                 <h2 class="portfolio-title-samples-subject">Технокряк</h2>
@@ -62,7 +62,8 @@
             </div>
             </li>
             <li class="item">
-                <a href=""><img src="./images/project_2.jpg" width="370" height="294" alt="Постер по баскетболу">
+                <a href=""><img class="image" src="./images/project_2.jpg" width="370" height="294"
+                        alt="Постер по баскетболу">
                     <div class="content">
                         <h2 class="portfolio-title-samples-subject">Постер <span lang="en">New Orlean vs Golden
                                 Star</span></h2>
@@ -71,7 +72,7 @@
                 </a>
             </li>
             <li class="item">
-                <a href=""><img src="./images/project_3.jpg" width="370" height="294"
+                <a href=""><img class="image" src="./images/project_3.jpg" width="370" height="294"
                         alt="Иконка приложения для ресторана"></a>
                 <div class="content">
                     <h2 class="portfolio-title-samples-subject">Ресторан <span lang="en">Seafood</span></h2>
@@ -80,7 +81,8 @@
                 </div>
             </li>
             <li class="item">
-                <a href=""><img src="./images/project_4.jpg" width="370" height="294" alt="Проект для наушников">
+                <a href=""><img class="image" src="./images/project_4.jpg" width="370" height="294"
+                        alt="Проект для наушников">
                     <div class="content">
                         <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Prime</span></h2>
                         <p class="portfolio-title-samples-text">Маркетинг</p>
@@ -88,7 +90,8 @@
                 </div>
             </li>
             <li class="item">
-                <a href=""><img src="./images/project_5.jpg" width="370" height="294" alt="Проект для коробок">
+                <a href=""><img class="image" src="./images/project_5.jpg" width="370" height="294"
+                        alt="Проект для коробок">
                     <div class="content">
                         <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Boxes</span></h2>
                         <p class="portfolio-title-samples-text">Приложение</p>
@@ -96,7 +99,8 @@
                 </div>
             </li>
             <li class="item">
-                <a href=""><img src="./images/project_6.jpg" width="370" height="294" alt="Веб-сайт на моноблоке">
+                <a href=""><img class="image" src="./images/project_6.jpg" width="370" height="294"
+                        alt="Веб-сайт на моноблоке">
                     <div class="content">
                         <h2 class="portfolio-title-samples-subject" lang="en">Inspiration has no Borders</h2>
                         <p class="portfolio-title-samples-text">Веб-сайт</p>
@@ -104,7 +108,8 @@
                 </div>
             </li>
             <li class="item">
-                <a href=""><img src="./images/project_7.jpg" width="370" height="294" alt="Разворот книги">
+                <a href=""><img class="image" src="./images/project_7.jpg" width="370" height="294"
+                        alt="Разворот книги">
                     <div class="content">
                         <h2 class="portfolio-title-samples-subject">Издание <span lang="en">Limited Edition</span></h2>
                         <p class="portfolio-title-samples-text">Дизайн</p>
@@ -112,7 +117,8 @@
                 </div>
             </li>
             <li class="item">
-                <a href=""><img src="./images/project_8.jpg" width="370" height="294" alt="Маркетинговый проект">
+                <a href=""><img class="image" src="./images/project_8.jpg" width="370" height="294"
+                        alt="Маркетинговый проект">
                     <div class="content">
                         <h2 class="portfolio-title-samples-subject">Проект <span lang="en">LAB</span></h2>
                         <p class="portfolio-title-samples-text">Маркетинг</p>
@@ -120,7 +126,8 @@
                 </div>
             </li>
             <li class="item">
-                <a href=""><img src="./images/project_9.jpg" width="370" height="294" alt="Приложение для ноутбука">
+                <a href=""><img class="image" src="./images/project_9.jpg" width="370" height="294"
+                        alt="Приложение для ноутбука">
                     <div class="content">
                         <h2 class="portfolio-title-samples-subject">Growing Business</h2>
                         <p class="portfolio-title-samples-text">Приложение</p>
