--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
             </li>
             <li class="item">
                 <a href=""><img class="image" src="./images/project_3.jpg" width="370" height="294"
-                        alt="Иконка приложения для ресторана"></a>
+                        alt="Иконка приложения для ресторана">
                 <div class="content">
                     <h2 class="portfolio-title-samples-subject">Ресторан <span lang="en">Seafood</span></h2>
                     <p class="portfolio-title-samples-text">Приложение</p>
@@ -87,7 +87,7 @@
                         <h2 class="portfolio-title-samples-subject">Проект <span lang="en">Prime</span></h2>
                         <p class="portfolio-title-samples-text">Маркетинг</p>
                 </a>
-                </div>
+                    </div>
             </li>
             <li class="item">
                 <a href=""><img class="image" src="./images/project_5.jpg" width="370" height="294"
@@ -105,7 +105,7 @@
                         <h2 class="portfolio-title-samples-subject" lang="en">Inspiration has no Borders</h2>
                         <p class="portfolio-title-samples-text">Веб-сайт</p>
                 </a>
-                </div>
+                    </div>
             </li>
             <li class="item">
                 <a href=""><img class="image" src="./images/project_7.jpg" width="370" height="294"
@@ -114,7 +114,7 @@
                         <h2 class="portfolio-title-samples-subject">Издание <span lang="en">Limited Edition</span></h2>
                         <p class="portfolio-title-samples-text">Дизайн</p>
                 </a>
-                </div>
+                    </div>
             </li>
             <li class="item">
                 <a href=""><img class="image" src="./images/project_8.jpg" width="370" height="294"
@@ -123,7 +123,7 @@
                         <h2 class="portfolio-title-samples-subject">Проект <span lang="en">LAB</span></h2>
                         <p class="portfolio-title-samples-text">Маркетинг</p>
                 </a>
-                </div>
+                    </div>
             </li>
             <li class="item">
                 <a href=""><img class="image" src="./images/project_9.jpg" width="370" height="294"
@@ -132,7 +132,7 @@
                         <h2 class="portfolio-title-samples-subject">Growing Business</h2>
                         <p class="portfolio-title-samples-text">Приложение</p>
                 </a>
-                </div>
+                    </div>
             </li>
             </ul>
             </div>
