--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container nav">
             <nav class="navigate">
                 <a class="navigate-logo" href="index.html"> <span class="navigate-logo-color">Web</span>Studio</a>
@@ -34,11 +34,11 @@
     </header>
     <main>
 
-        <section class="hero-section">
-                <h1 class="title-hero">Эффективные решения для вашего бизнеса</h1>
-                <button class="hero-button" type="button">Заказать услугу</button>
+        <section class="section hero">
+            <h1 class="title-hero">Эффективные решения <br> для вашего бизнеса</h1>
+            <button class="hero-button" type="button">Заказать услугу</button>
         </section>
-        <section class="advantages-section">
+        <section class="section">
             <div class="container">
                 <h2 class="title-advantages">Наши Преимущества</h2>
                 <ul class="advantages-list">
@@ -68,7 +68,7 @@
                 </ul>
             </div>
         </section>
-        <section class="samples-section">
+        <section class="section samples">
             <div class="container">
                 <h2 class="title-samples">Чем мы занимаемся</h2>
                 <ul class="samples-list">
@@ -82,7 +82,7 @@
                 </ul>
             </div>
         </section>
-        <section class="team-section">
+        <section class="section team">
             <div class="container">
                 <h2 class="title-team">Наша команда</h2>
                 <ul class="team-list">
@@ -113,7 +113,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container footer">
+        <div class="container">
             <a class="navigate-logo" href="index.html"> <span class="navigate-logo-color">Web</span> <span
                     class="footer-logo-color"> Studio </span></a>
             <address>
