--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -427,6 +427,17 @@
                         </li>
                     </ul>
                 </div>
+                <div class="mail-form-container">
+                    <b class="submit-text">Подпишитесь на рассылку</b>
+                    <form class="mail-form">
+                        <input type="email" name="email" placeholder="E-mail">
+                        <button class="submit-button" type="submit">Подписаться
+                            <svg class="telegram-icon">
+                                <use href="./images/sprite.svg#telegram"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </footer>
@@ -437,9 +448,55 @@
                     <use href="./images/sprite.svg#close"></use>
                 </svg>
             </button>
+            <div role="group" class="modal-form-container">
+                <b class="modal-title"> Оставьте свои данные, мы вам перезвоним</b>
+                <form>
+                    <div class="form-field">
+                        <label class="label-name" for="name">Имя</label>
+                        <input class="input-name" type="text" name="name" id="name" autocomplete="off">
+                        <div class="image-input">
+                            <svg class="input-icon">
+                                <use href="./images/sprite.svg#form_name"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="form-field">
+                        <label class="label-tel" for="tel">Телефон</label>
+                        <input class="input-tel" type="tel" name="tel" id="tel">
+                        <div class="image-input">
+                            <svg class="input-icon">
+                                <use href="./images/sprite.svg#form_phone"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="form-field">
+                        <label class="label-mail" for="mail">Почта</label>
+                        <input class="input-mail" type="email" name="mail" id="mail">
+                        <div class="image-input">
+                            <svg class="input-icon">
+                                <use href="./images/sprite.svg#form_mail"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="form-field">
+                        <label class="label-comment" for="comment">Комментарий</label>
+                        <textarea class="comment" name="comment" id="comment" placeholder="Введите текст"></textarea>
+                    </div>
+
+                    <div class="form-field policy ">
+                        <input class="input-checkbox" type="checkbox" name="policy" id="policy">
+                        <span class="check-icon"></span>
+                        <label class="label-policy" for="policy">Соглашаюсь с рассылкой и принимаю <a href=""
+                                class="policy-link">Условия договора</a>
+                        </label>
+                    </div>
+                    <button type="submit" class="modal-submit-button">Отправить</button>
+                </form>
+            </div>
         </div>
     </div>
     <script src="./js/modal.js"></script>
+
 </body>
 
 </html>
