--- a/portfolio.html
+++ b/portfolio.html
@@ -60,18 +60,19 @@
                     </li>
                     <li class="item"> <button class="button-list-item" type="button">Маркетинг</button>
                     </li>
-        
+
                 </ul>
                 <ul class="projects-section-title-samples">
                     <li class="item">
-        
+
                         <a class="link" href="">
                             <div class="image-thumb">
                                 <img class="image" src="./images/project_1.jpg" width="370" height="294"
                                     alt="Веб-сайт на ноутбуке">
                                 <div class="portfolio-image-description">
                                     <p class="portfolio-image-description-text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту
                                         платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
@@ -90,7 +91,8 @@
                                     alt="Постер по баскетболу">
                                 <div class="portfolio-image-description">
                                     <p class="portfolio-image-description-text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту
                                         платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
@@ -110,7 +112,8 @@
                                     alt="Иконка приложения для ресторана">
                                 <div class="portfolio-image-description">
                                     <p class="portfolio-image-description-text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту
                                         платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
@@ -129,7 +132,8 @@
                                     alt="Проект для наушников">
                                 <div class="portfolio-image-description">
                                     <p class="portfolio-image-description-text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту
                                         платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
@@ -148,7 +152,8 @@
                                     alt="Проект для коробок">
                                 <div class="portfolio-image-description">
                                     <p class="portfolio-image-description-text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту
                                         платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
@@ -167,7 +172,8 @@
                                     alt="Веб-сайт на моноблоке">
                                 <div class="portfolio-image-description">
                                     <p class="portfolio-image-description-text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту
                                         платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
@@ -182,10 +188,12 @@
                     <li class="item">
                         <a class="link" href="">
                             <div class="image-thumb">
-                                <img class="image" src="./images/project_7.jpg" width="370" height="294" alt="Разворот книги">
+                                <img class="image" src="./images/project_7.jpg" width="370" height="294"
+                                    alt="Разворот книги">
                                 <div class="portfolio-image-description">
                                     <p class="portfolio-image-description-text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту
                                         платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
@@ -205,7 +213,8 @@
                                     alt="Маркетинговый проект">
                                 <div class="portfolio-image-description">
                                     <p class="portfolio-image-description-text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту
                                         платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
@@ -224,7 +233,8 @@
                                     alt="Приложение для ноутбука">
                                 <div class="portfolio-image-description">
                                     <p class="portfolio-image-description-text">
-                                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                        Технокряк это современная площадка распространения коронавируса. Компании
+                                        используют эту
                                         платформу для цифрового
                                         шпионажа и атак на защищённые сервера конкурентов.
                                     </p>
@@ -296,6 +306,17 @@
                             </a>
                         </li>
                     </ul>
+                </div>
+                <div class="mail-form-container">
+                    <b class="submit-text">Подпишитесь на рассылку</b>
+                    <form class="mail-form">
+                        <input type="email" name="email" placeholder="E-mail">
+                        <button class="submit-button " type="submit">Подписаться
+                            <svg class="telegram-icon">
+                                <use href="./images/sprite.svg#telegram"></use>
+                            </svg>
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
